--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,6 @@ body {
   max-width: 100vw;
   max-height: 100vh;
 }
+.ant-pro-layout .ant-pro-layout-content {
+  padding-bottom: 96px !important;
+}
