--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,20 @@
-.title {
-    color: red;
+@import '../assets/themeColor';
+
+.page {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: $bg_gray_200;
+
+    >main,
+    header,
+    footer {
+        width: 100%;
+        text-align: center;
+    }
+
+    >footer {
+        margin-top: auto;
+    }
 }
